--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "serve -s dist -l 4000"
+    "start": "serve -s dist -l 4000 --single"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.11.1",
